tests/NormalTests/paczka1/small_fuzzy/58533297.err
Error in line 5: vbiO A32 451,7
Error in line 10: A859 A768 27,2
